# picampinos

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  cam.c  cam.h  ezspi_slave.c  ezspi_slave.h  ezspi_slave.pio  get_sdk.sh  install_picotool.sh  iot_sram.c  iot_sram.h  iot_sram.pio  main.bak  main.c  picampinos.pio  picapinos.pio  pico_build.sh  picocam.c  picocam.pio  sccb_if.c  sccb_if.h  sfp_hw.c  sfp_hw.h  tbl_8b10b.h  udp.h
csharp/udp_cam/: .gitignore  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  UdpReceiver.cs  udp_cam.csproj  udp_cam.sln
firmware/: .gitignore  CMakeLists.txt  FreeRTOSConfig_examples_common.h  c_cpp_properties.json  cam.c  cam.h  ezspi_slave.c  ezspi_slave.h  ezspi_slave.pio  iot_sram.c  iot_sram.h  iot_sram.pio  main.c  main.c_bak  picampinos.pio  picampinos.pio_bak  pico_build.sh  pico_psram.c  pico_psram.h  random_test_data.h  sccb_if.c  sccb_if.h  ser_100base_fx.pio  sfp_hw.c  sfp_hw.h  tbl_8b10b.c  tbl_8b10b.h  udp.c  udp.h
firmware/arithmetic/: CMakeLists.txt  basstat.c  complex.c  fft.c  fft4f2d.c  fft4f2d.h  fft_helper.c  fft_helper.h  image_process.h  int_fft.c  int_fft.h  my_fft.c  my_fft.h  pico.log.c  pico_dct8.c  pico_dct8.h  pico_fft.c  pico_fft.h  pico_gauss_elim.c  pico_gauss_elim.h  pico_gs.c  pico_gs.h  pico_leq.c  pico_leq.h  pico_log.h  sslib.h  test_code.c  test_code.h
firmware/rj45/: arp.c  des_10base_t.pio  eth.c  eth.h  hwinit.c  hwinit.h  icmp.c  ser_10base_t.pio  system.h  udp.c  udp.h
firmware/sfp/: ser_100base_fx.pio  sfp_hw.h  tbl_8b10b.c  udp.h
firmware/sparkfun_pico/: sfe_pico_boards.h
firmware/sparkfun_pico/tlsf/: README.md
matlab/: comm_raspi_spi.m  comm_raspi_uart_bin.m  comm_uart_bin.m  estimateLightSource.m  f_blur.m  fcmethod.m  fft_split.m  frankotChellappa.m  my_graythresh.m  pascal_1d.m  readSpData.m  readrgb.m  receive_depth.m  receive_udp.asv  receive_udp.bak  receive_udp.m  sfs1.m
